--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "min-chat",
-  "version": "1.0.0",
+  "name": "update-chat",
+  "version": "1.0.1",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
